<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="400dp">
        <ImageView
            android:contentDescription="@string/bluejack_kos"
            android:layout_marginTop="15dp"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:src="@drawable/logo1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            android:layout_marginTop="75dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:autofillHints="Username"
                android:background="@drawable/edittext_style"
                android:drawableStart="@drawable/user"
                android:letterSpacing="0.1"
                android:textSize="20sp"
                android:inputType="text"
                android:textColor="#fff" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:autofillHints="@string/password"
                android:background="@drawable/edittext_style"
                android:drawableStart="@drawable/pass1"
                android:inputType="textPassword"
                android:letterSpacing="0.1"
                android:textSize="20sp"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:orientation="vertical"
        android:gravity="bottom">
        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_style"
            android:layout_marginBottom="35dp">

        </Button>
        <TextView
            android:id="@+id/signuptxt"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_account"
            android:linksClickable="true"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:letterSpacing="0.1"/>


    </LinearLayout>

</RelativeLayout>